took width of .gd-f2 to avoid overlaping

--- a/sass/2-layouts/_body.sass
+++ b/sass/2-layouts/_body.sass
@@ -476,7 +476,7 @@
   .gd-f2
     display: flex
     justify-content: space-around
-    width: 100%
+
     span
       color: #351531
       font-size: 0.9em
